# flare-toolchains

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl  generate_config.sh
configs/ubuntu2004/: .latest.bazelrc  repo.bzl  versions.bzl
configs/ubuntu2004/default_toolchain_config_spec_name/bazel_3.7.1/cc/: BUILD
configs/ubuntu2004/default_toolchain_config_spec_name/bazel_3.7.1/config/: BUILD
configs/ubuntu2004/default_toolchain_config_spec_name/bazel_3.7.2/config/: BUILD
configs/ubuntu2004_clang/: .latest.bazelrc  repo.bzl  versions.bzl
configs/ubuntu2004_clang/default_toolchain_config_spec_name/bazel_3.7.1/cc/: BUILD
configs/ubuntu2004_clang/default_toolchain_config_spec_name/bazel_3.7.1/config/: BUILD
configs/ubuntu2004_clang/default_toolchain_config_spec_name/bazel_3.7.2/cc/: builtin_include_directory_paths  module.modulemap
configs/ubuntu2004_clang/default_toolchain_config_spec_name/bazel_3.7.2/config/: BUILD
dockerfiles/ubuntu2004-rbe/: BUILD.bazel  Dockerfile
dockerfiles/ubuntu2104-rbe/: BUILD.bazel  Dockerfile
osx/cc/: BUILD  libtool_check_unique  wrapped_clang  wrapped_clang_pp  xcode-locator-bin
osx/config/: BUILD
osx/java/: BUILD
ubuntu2004/cc/: BUILD  module.modulemap
ubuntu2004/config/: BUILD
ubuntu2104/cc/: BUILD  builtin_include_directory_paths  module.modulemap
ubuntu2104/config/: BUILD
